CSS changes for header and classification tab

--- a/dashboardv2/public/css/scss/__variable.scss
+++ b/dashboardv2/public/css/scss/__variable.scss
@@ -38,7 +38,7 @@ $color_jungle_green_approx: #38bb9b;
 $color_jungle_green_light: #7ed3be;
 $color_froly_approx: #ee6e73;
 $color_manatee_approx: #9398a0;
-$color_havelock_blue_approx: #4a90e2;
+$color_havelock_blue_approx: #C53E6C;
 $color_ironside_gray_approx: #686868;
 $color_mercury_approx: #e6e6e6;
 $color_whisper_approx: #f6f7fa;
