--- a/dashboardv2/public/js/templates/search/SearchResultLayoutView_tmpl.html
+++ b/dashboardv2/public/js/templates/search/SearchResultLayoutView_tmpl.html
@@ -108,7 +108,7 @@
           {{#if isSearchTab}}
           <div class="searchTypeLabel"><b>{{searchType}}</b></div>
           {{/if}}
-          <div class="entityLink searchTypeSubLabel" style="display: none">
+          <div class="entityLink searchTypeSubLabel" style="display: none padding: auto;">
             <div class="entityLink">
               Search Atlas for existing entities {{#if entityCreate}} or
               <a href="javascript:void(0)" data-id="createEntity">
