--- a/dashboardv2/public/js/templates/tag/CreateTagLayoutView_tmpl.html
+++ b/dashboardv2/public/js/templates/tag/CreateTagLayoutView_tmpl.html
@@ -73,14 +73,30 @@
     </div>
     <div class="form-group">
         <label class="col-sm-12" style="margin-left: 13px;">Attributes(optional)</label>
-        <div class="col-sm-10">
+        <!-- <div class="col-sm-10">
             <button title="Add New Attribute" type="button" class="btn btn-action btn-sm" data-id="attributeData" style="width: 45%;"><i class="fa fa-plus"></i> <span style="font-family: Rakuten Sans UI;
                 font-size: 16px;
                 line-height: 24px;"> New Attributes</span></button>
-        </div>
+        </div> -->
     </div>
     {{/if}}
     <div data-id="addAttributeDiv">
+        <div>
+            <div class="col-sm-7 headerFont">
+                Attribute Name
+            </div>
+            <div class="col-sm-3 headerFont">
+                String
+            </div>
+            <div class="col-sm-2 headerFont">
+                Action
+            </div>
+        </div>
+    </div>
+    <div class="" style="margin: 20px;">
+        <button title="Add New Attribute" type="button" class="btn btn-action btn-sm" data-id="attributeData" style="width: 45%;"><i class="fa fa-plus"></i> <span style="font-family: Rakuten Sans UI;
+            font-size: 16px;
+            line-height: 24px;"> New Attributes</span></button>
     </div>
     </div>
 </form>
