--- a/dashboardv2/public/js/templates/tag/TagAttributeItemView_tmpl.html
+++ b/dashboardv2/public/js/templates/tag/TagAttributeItemView_tmpl.html
@@ -15,11 +15,22 @@
  * limitations under the License.
 -->
 <div class="form-group clearfix">
-    <div class="col-sm-7">
+    <!-- <div>
+        <div class="col-sm-7 headerFont">
+            Attribute Name
+        </div>
+        <div class="col-sm-3 headerFont">
+            String
+        </div>
+        <div class="col-sm-2 headerFont">
+            Action
+        </div>
+    </div> -->
+    <div class="col-sm-7" style="padding: 10px;   border: 0.5px #F2F2F2 solid;">
         <input class="form-control attributeInput" data-id="attributeInput" placeholder="Attribute name" style="background-color: white; border: 1px black solid; color: black;">
         </input>
     </div>
-    <div class="col-sm-3">
+    <div class="col-sm-3" style="padding: 10px;   border: 0.5px #F2F2F2 solid;">
         <select class="form-control dataTypeSelector" data-id="dataTypeSelector" style="background-color: white; border: 1px black solid; color: black;">
             <option selected="selected">string</option>
             <option>boolean</option>
@@ -31,9 +42,9 @@
             <option>date</option>
         </select>
     </div>
-    <div class="col-sm-2 attributePlusData" align="right" style="">
-        <button type="button" class="btn btn-danger btn-sm closeInput" style="background-color: white;
+    <div class="col-sm-2 attributePlusData" align="right" style="padding: 10px;   border: 0.5px #F2F2F2 solid;  align-items: center; justify-content: center;">
+        <button type="button" class="btn btn-danger btn-sm closeInput" style="margin-right: 20px; background-color: white;
         color: gray;
-        border-color: white;" data-id="close"><i class="fa fa-times" style="    font-size: 20px;"></i></button>
+        border-color: white;" data-id="close"><img src="img/closeIcon.svg" width="20px" height="20px" class="close closeIcon"></button>
     </div>
 </div>
