search tab modals

--- a/dashboardv2/public/css/scss/form.scss
+++ b/dashboardv2/public/css/scss/form.scss
@@ -34,7 +34,7 @@
 
 .form-group {
     .required:after {
-        content: "*";
+        // content: "*";
         padding-left: 1%;
         color: $red;
     }
@@ -530,7 +530,7 @@ button {
         margin-top: 25px;
 
         span.required:after {
-            content: "*";
+            // content: "*";
             padding-left: 1%;
             color: $red;
         }
