--- a/dashboardv2/public/css/scss/table.scss
+++ b/dashboardv2/public/css/scss/table.scss
@@ -103,6 +103,7 @@ tr.empty {
             button {
                 padding-right: 11px;
             }
+            font-weight: 600;
         }
     }
 
