--- a/dashboardv2/public/js/templates/search/SearchLayoutView_tmpl.html
+++ b/dashboardv2/public/js/templates/search/SearchLayoutView_tmpl.html
@@ -76,9 +76,9 @@
     </div>
     <div id="searchResult"></div>
     <div class="col-sm-12">
-        <div class="col-sm-12  basicSaveSearch" data-id="r_saveSearchBasic"></div>
+        <div class=" basicSaveSearch" data-id="r_saveSearchBasic"></div>
     </div>
     <div class="col-sm-12">
-        <div class="col-sm-12  advanceSaveSearch" data-id="r_saveSearchAdvance" style="display: none"></div>
+        <div class="  advanceSaveSearch" data-id="r_saveSearchAdvance" style="display: none"></div>
     </div>
 </div>
