--- a/dashboardv2/public/js/templates/search/save/SaveSearchItemView_tmpl.html
+++ b/dashboardv2/public/js/templates/search/save/SaveSearchItemView_tmpl.html
@@ -14,7 +14,7 @@
  * See the License for the specific language governing permissions and
  * limitations under the License.
 -->
-<div data-id="{{guid}}" class="item">
+<div data-id="{{guid}}" class="item savedSearchItem">
     <div class="tools">
         <i class="fa fa-ellipsis-h saveSearchPopover" data-original-title="" title="" data-id=""></i>
     </div>
