--- a/dashboardv2/public/js/templates/site/Header.html
+++ b/dashboardv2/public/js/templates/site/Header.html
@@ -28,7 +28,7 @@
                 </div>
             </div>
             <div style="flex: 0.75;  display: flex;align-items: flex-start; justify-content: center; flex-direction: column; margin-left: 10px;">
-                <div class="title" style="font-weight: bold; color: black; font-size: 16px;">Atlas</div>
+                <div class="title" style="font-weight: bold; color: black; font-size: 16px;">Data Realm</div>
                 <div class="subtitle" style="font-weight: bold;  font-size: 12px;">Dashboard</div>
             </div>
         </div>
