entity modal(required)

--- a/dashboardv2/public/js/templates/site/Header.html
+++ b/dashboardv2/public/js/templates/site/Header.html
@@ -42,7 +42,7 @@
                 background-color: #F7F7F7; 
                 width: 100%;     
                 font-family: Rakuten Sans UI" name="global search" placeholder="Search" data-id="globalSearch" />
-                <a ><img style="margin-left: 20px"  src="img/squareButton.png" height="36px" width="36px"></a>
+                <a class="show-stat" href="javascript:void(0); title=""><img style="margin-left: 20px"  src="img/squareButton.png" height="36px" width="36px"></a>
                 <a><img style="margin-left: 20px"  src="img/squareQues.png" height="36px" width="36px"></a>
             </div>
         </div>
