--- a/dashboardv2/public/css/scss/override.scss
+++ b/dashboardv2/public/css/scss/override.scss
@@ -434,7 +434,7 @@ div.columnmanager-visibilitycontrol {
 
 div.columnmanager-dropdown-container {
     .columnmanager-dropdown-item {
-        padding: 2px 13px;
+        padding: 10px 16px;
     }
 
     &.open {
@@ -627,4 +627,81 @@ div.columnmanager-dropdown-container {
     ul {
         list-style: disc;
     }
+}
+.checkboxcustomstyles{
+.main {
+    display: block;
+    position: relative;
+    padding-left: 35px;
+    cursor: pointer;
+    font-size: 14px;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+  }
+  
+  /* Hide the browser's default checkbox */
+  .main input {
+    position: absolute;
+    opacity: 0;
+    cursor: pointer;
+    height: 0;
+    width: 0;
+  }
+  
+  /* Create a custom checkbox */
+  .checkmark {
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 20px;
+    width: 20px;
+    background-color: #eee;
+    border-radius: 4px;
+  }
+  
+  /* On mouse-over, add a grey background color */
+  .main:hover input ~ .checkmark {
+    background-color: #ccc;
+  }
+  
+  /* When the checkbox is checked, add a blue background */
+  .main input:checked ~ .checkmark {
+    background-color: $color_rcp_primary;
+  }
+  
+  /* Create the checkmark/indicator (hidden when not checked) */
+  .checkmark:after {
+    content: "";
+    position: absolute;
+    display: none;
+  }
+  
+  /* Show the checkmark when checked */
+  .main input:checked ~ .checkmark:after {
+    display: block;
+  }
+  
+  /* Style the checkmark/indicator */
+  .main .checkmark:after {
+    left: 8px;
+top: 4px;
+width: 5px;
+height: 10px;
+border: solid white;
+/* border-radius: 4px; */
+border-width: 0 1px 1px 0;
+    -webkit-transform: rotate(45deg);
+    -ms-transform: rotate(45deg);
+    transform: rotate(45deg);
+  }
+  .checkboxStyle {
+    width: 20px;
+    height: 40px;
+    border-radius: 4px;
+    margin-top: 0px !important;
+    margin-right: 8px !important;
+  }
+ 
 }
