--- a/dashboardv2/public/css/scss/search.scss
+++ b/dashboardv2/public/css/scss/search.scss
@@ -92,16 +92,14 @@ a:hover {
     font-weight: bold;
   }
 
-  .key {
-    color: $color_rcp_primary;
-  }
+  
 
   .operator {
     color: $action_gray;
   }
 
   .value {
-    color: $tag_color;
+    color: $color_rcp_primary;
   }
 }
 
@@ -230,60 +228,73 @@ ul.type-filter-ul {
       .main {
         display: block;
         position: relative;
-
+        padding-left: 35px;
         cursor: pointer;
-    
+        font-size: 14px;
+        -webkit-user-select: none;
+        -moz-user-select: none;
+        -ms-user-select: none;
+        user-select: none;
       }
-
-      /* Hide the default checkbox */
-      input[type="checkbox"] {
-        visibility: hidden;
+      
+      /* Hide the browser's default checkbox */
+      .main input {
+        position: absolute;
+        opacity: 0;
+        cursor: pointer;
+        height: 0;
+        width: 0;
       }
-
-      .geekmark {
+      
+      /* Create a custom checkbox */
+      .checkmark {
         position: absolute;
         top: 0;
         left: 0;
         height: 20px;
         width: 20px;
+        background-color: #eee;
         border-radius: 4px;
-        background-color: $white;
-        border: 1px solid #686868;
       }
-
-    
-
-      .main input:checked ~ .geekmark {
+      
+      /* On mouse-over, add a grey background color */
+      .main:hover input ~ .checkmark {
+        background-color: #ccc;
+      }
+      
+      /* When the checkbox is checked, add a blue background */
+      .main input:checked ~ .checkmark {
         background-color: $color_rcp_primary;
-        border: 1px solid #90003b;
-
       }
-
-      .geekmark:after {
+      
+      /* Create the checkmark/indicator (hidden when not checked) */
+      .checkmark:after {
         content: "";
         position: absolute;
         display: none;
       }
-
-      /* Display checkmark when checked */
-      .main input:checked ~ .geekmark:after {
+      
+      /* Show the checkmark when checked */
+      .main input:checked ~ .checkmark:after {
         display: block;
       }
-
-      .main .geekmark:after {
+      
+      /* Style the checkmark/indicator */
+      .main .checkmark:after {
         left: 8px;
-        bottom: 5px;
-        width: 6px;
-        height: 12px;
-        border: solid white;
-        border-width: 0 4px 4px 0;
+    top: 4px;
+    width: 5px;
+    height: 10px;
+    border: solid white;
+    /* border-radius: 4px; */
+    border-width: 0 1px 1px 0;
         -webkit-transform: rotate(45deg);
         -ms-transform: rotate(45deg);
         transform: rotate(45deg);
       }
       .checkboxStyle {
         width: 20px;
-        height: 20px;
+        height: 40px;
         border-radius: 4px;
         margin-top: 0px !important;
         margin-right: 8px !important;
@@ -340,6 +351,25 @@ hr.hr-filter {
     }
   }
 }
+.selectColumnButton{
+    margin-top: -80px !important;
+    padding-right: 16px;
+    button{
+        border: 1px solid #9C9C9C;
+box-sizing: border-box;
+border-radius: 4px;
+font-size: 16px;
+color: #333333;
+background:$white;
+width: 170px;
+text-align: left;
+i{
+    float: right;
+    margin-top: 4px;
+}
+    }
+}
+
 
 .query-builder {
   .rule-container {
@@ -447,4 +477,7 @@ hr.hr-filter {
 }
 ul {
     list-style-type: none;
+}
+.r_TagAttributeDetailLayoutView + .container-fluid{
+
 }
