--- a/dashboardv2/public/css/scss/theme.scss
+++ b/dashboardv2/public/css/scss/theme.scss
@@ -379,6 +379,9 @@ hr[size="10"] {
 
 .pagination-box {
     margin-top: 15px;
+    border-top: 1px solid #F2F2F2;
+    padding-top: 22px;
+    padding-right: 16px
 }
 
 .ellipsis-with-margin {
