--- a/dashboardv2/public/js/templates/search/SearchResultLayoutView_tmpl.html
+++ b/dashboardv2/public/js/templates/search/SearchResultLayoutView_tmpl.html
@@ -43,7 +43,7 @@
         style="display: none"
       >
         <div class="col-sm-12 inline-content-fr no-padding-left">
-          <div class="inline" data-id="colManager"></div>
+          <div class="inline selectColumnButton" data-id="colManager" ></div>
           <div class="inline">
             <a
               href="javascript:void(0)"
@@ -66,38 +66,38 @@
             >
           </div>
           {{/unless}}
-          <div class="inline" data-id="containerCheckBox" style="display: none">
-            <label class="checkbox-inline btn" for="historicalentities">
+          <div class="inline checkboxcustomstyles tableFilterCheckbox" data-id="containerCheckBox" style="display: none">
+            <label class="main" for="historicalentities"><b>Show historical entities</b>
               <input
                 type="checkbox"
                 data-id="checkDeletedEntity"
                 data-value="includeDE"
                 id="historicalentities"
-              />
-              <b>Show historical entities</b></label
+              /><span class="checkmark"></span>
+             </label
             >
           </div>
-          <div class="inline" data-id="containerCheckBox" style="display: none">
-            <label class="checkbox-inline btn" for="subclassifications">
+          <div class="inline checkboxcustomstyles tableFilterCheckbox" data-id="containerCheckBox" style="display: none">
+            <label class="main" for="subclassifications"><b>Exclude sub-classifications</b>
               <input
                 type="checkbox"
                 data-id="checkSubClassification"
                 data-value="excludeSC"
                 id="subclassifications"
-              />
-              <b>Exclude sub-classifications</b></label
+              /><span class="checkmark"></span>
+              </label
             >
           </div>
           {{#ifCond fromView '!==' "classification"}}
-          <div class="inline" data-id="containerCheckBox" style="display: none">
-            <label class="checkbox-inline btn" for="subtypes">
+          <div class="inline checkboxcustomstyles tableFilterCheckbox" data-id="containerCheckBox" style="display: none">
+            <label class="main" for="subtypes"><b>Exclude sub-types</b>
               <input
                 type="checkbox"
                 data-id="checkSubType"
                 data-value="excludeST"
                 id="subtypes"
-              />
-              <b>Exclude sub-types</b></label
+              /><span class="checkmark"></span>
+              </label
             >
           </div>
           {{/ifCond}}
@@ -107,7 +107,7 @@
         <div class="viewPaneSearchBlock">
           {{#if isSearchTab}}
           <div class="searchTypeLabel"><b>{{searchType}}</b></div>
-          {{/if}}
+       
           <div class="entityLink searchTypeSubLabel" style="display: none ; padding: auto;">
             <div class="entityLink">
               Search Atlas for existing entities {{#if entityCreate}} or
@@ -117,6 +117,7 @@
               {{/if}}
             </div>
           </div>
+          {{/if}}
         </div>
       </div>
       <div
