Changes on Add-Classification,Create-Term,Update-Term,and css

--- a/dashboardv2/public/css/scss/common.scss
+++ b/dashboardv2/public/css/scss/common.scss
@@ -341,9 +341,10 @@ pre {
 }
 
 .long-description {
-    width: 85%;
+    width: 50%;
     cursor: default !important;
     background-color: transparent !important;
+    padding: 0px 0px;
 }
 
 .header-sec1 {
