--- a/dashboardv2/public/css/scss/table.scss
+++ b/dashboardv2/public/css/scss/table.scss
@@ -78,7 +78,7 @@ tr.empty {
         }
 
         .pretty.p-switch.p-fill input:checked~.state label:after {
-            background-color: #4a90e2 !important;
+            background-color: #C53E6C !important;
         }
 
         .pretty.p-switch.p-fill input:checked~.state.p-primary:before {
