--- a/dashboardv2/public/js/templates/tag/AddTagModalView_tmpl.html
+++ b/dashboardv2/public/js/templates/tag/AddTagModalView_tmpl.html
@@ -26,21 +26,21 @@
         </div>
         {{/if}}
         <div class="col-md-6">
-            <div class="col-md-12 addtag-propagte-box">
-                <div class="inline">
-                    <label class="checkbox-inline btn">
-                        <input type="checkbox" data-id="checkModalTagProperty" class="input" checked /> Propagate</label>
+            <div class="col-md-12 ">
+                <div class="inline checkboxcustomstyles tableFilterCheckbox">
+                    <label class="main"><b>Propagate</b>
+                        <input type="checkbox" data-id="checkModalTagProperty" class="input" checked /> <span class="checkmark"></span> </label>
                 </div>
-                <div class="inline" data-id="removePropagationOnEntityDeleteBox">
-                    <label class="checkbox-inline btn">
-                        <input type="checkbox" data-id="removePropagationOnEntityDelete" class="input" title="Propagated classification are removed during entity delete" /> Remove propagation on entity delete</label>
+                <div style="margin-left: 145px;margin-top: -25px;" class="inline checkboxcustomstyles tableFilterCheckbox" data-id="removePropagationOnEntityDeleteBox">
+                    <label class="main"><b>Remove propagation on entity delete</b>
+                        <input type="checkbox" data-id="removePropagationOnEntityDelete" class="input" title="Propagated classification are removed during entity delete" /><span class="checkmark"></span> </label>
                 </div>
             </div>
         </div>
         <div class="col-md-6">
-            <div class="inline">
-                <label class="checkbox-inline btn">
-                    <input type="checkbox" data-id="checkTimezoneProperty" class="input" /> Apply Validity Period</label>
+            <div class="inline checkboxcustomstyles tableFilterCheckbox">
+                <label class="main"><b>Apply Validity Period</b>
+                    <input type="checkbox" data-id="checkTimezoneProperty" class="input" /><span class="checkmark"></span> </label>
             </div>
         </div>
     </div>
