--- a/dashboardv2/public/js/templates/tag/TagDetailTableLayoutView_tmpl.html
+++ b/dashboardv2/public/js/templates/tag/TagDetailTableLayoutView_tmpl.html
@@ -17,9 +17,15 @@
 <div class="position-relative">
     <div class="tableOverlay"></div>
     <div class="inline-content-fr clearfix" style="margin-bottom: 10px;">
-        <div class="inline">
-            <label class="checkbox-inline btn">
-                <input type="checkbox" data-id="checkPropagtedTag" class="input" checked="true" name="queryType" value="text" name="check" value="1" /> Show Propagated Classifications</label>
+        <div class="inline checkboxcustomstyles tableFilterCheckbox" >
+            <label class="main"><b>Show Propagated Classifications</b>
+                <input type="checkbox" 
+                data-id="checkPropagtedTag" 
+                checked="true" 
+                name="queryType" 
+                value="text" 
+                name="check" 
+                value="1" /><span class="checkmark"></span> </label>
         </div>
         <div class="pull-left" style="width: 300px;"><select data-id="tagList"></select></div>
     </div>
