--- a/dashboardv2/public/css/scss/__variable.scss
+++ b/dashboardv2/public/css/scss/__variable.scss
@@ -92,7 +92,7 @@ $black_80: rgba(0, 0, 0, 0.8);
 $color_bright_turquoise_approx: #00ffd0;
 $color_mountain_mist_approx: #999;
 $color_suva_gray_approx: #868686;
-$tag_color: #4a90e2;
+$tag_color: #C53E6C;
 $delete_link: #bb5838;
 $color_rcp_primary:#C53E6C;
 $color_rcp_line_color:#EBEBEB;
