--- a/dashboardv2/public/css/scss/form.scss
+++ b/dashboardv2/public/css/scss/form.scss
@@ -66,6 +66,7 @@
             outline: 0; //Instead of the line below you could use @include box-shadow($shadow-1, $shadow-2, $shadow-3, $shadow-4, $shadow-5, $shadow-6, $shadow-7, $shadow-8, $shadow-9, $shadow-10)
             box-shadow: inset 0 1px 1px $black_7_5, 0 0 2px $color_bali_hai_approx;
         }
+        
     }
   
 }
@@ -96,11 +97,16 @@
 
 textarea {
     resize: none;
+    border: none !important;  
+    box-shadow: none !important;
+
 
     &:focus {
         outline: none !important;
     }
+    
 }
+
 
 label {
     font-weight: 600;
