--- a/dashboardv2/public/css/scss/tab.scss
+++ b/dashboardv2/public/css/scss/tab.scss
@@ -206,9 +206,24 @@ ul.tabs li.tab {
         font-size: 16px;
     }
 }
-
-.cTabActiveClass {
-    &:hover {
-        color: $white;
-    }
+.nav .nav-tabs{
+    border: none !important;
 }
+.row{
+    border: none !important;
+
+}
+.col-sm-12 .default-tab{
+    border: none !important;
+    
+}
+
+// <div class="row">
+//             <div class="col-sm-12 default-tab">
+//                 <ul class="nav nav-tabs" data-id="tab-list">
+//                     <li role="entities" class="tab active"><a href="#tab-entities" aria-controls="tab-entities" role="tab" data-toggle="tab">Entities</a></li>
+//                     <li role="classification"><a href="#tab-tagTable" aria-controls="tab-tagTable" role="tab" data-toggle="tab">Classifications</a></li>
+//                     <li role="relatedTerm"><a href="#tab-relatedTerm" aria-controls="tab-relatedTerm" role="tab" data-toggle="tab">Related Terms</a></li>
+//                 </ul>
+//             </div>
+//         </div>
