--- a/dashboardv2/public/js/external_lib/atlas-lineage/src/styles/__varibale.scss
+++ b/dashboardv2/public/js/external_lib/atlas-lineage/src/styles/__varibale.scss
@@ -28,7 +28,7 @@ $black_80: rgba(0, 0, 0, 0.8);
 $color_mountain_mist_approx: #999;
 $color_keppel_approx: #37bb9b;
 $color_suva_gray_approx: #868686;
-$color_havelock_blue_approx: #4a90e2;
+$color_havelock_blue_approx: #C53E6C;
 $color_celeste_approx: #ccc;
 $color_bright_turquoise_approx: #00ffd0;
 $color_jungle_green_approx: #38bb9b;
