--- a/dashboardv2/public/js/templates/glossary/CreateEditCategoryTermLayoutView_tmpl.html
+++ b/dashboardv2/public/js/templates/glossary/CreateEditCategoryTermLayoutView_tmpl.html
@@ -15,22 +15,53 @@
  * limitations under the License.
 -->
 <form name="tagDefinitionform" class="form-horizontal" data-id="categoryTermForm">
-    <div class="form-group">
-        <label class="control-label col-sm-2 {{#if create}}required{{/if}}" for="name">Name</label>
+    <div class="form-group" style="display: flex; flex-direction: column;">
+        <div style="display: flex; justify-content: flex-start;">
+                <label style="font-family: Rakuten Sans UI;
+                font-style: normal;
+                font-weight: normal;
+                font-size: 12px;
+                line-height: 16px;
+                color: #686868;
+                margin-bottom: 10px;
+                margin-left: 27px;"
+                  for="name">
+                 Name
+            </label>
+        </div>
         <div class="col-sm-10">
-            <input class="form-control" data-id="name" name="name" value="{{modelJSON.name}}" placeholder="Name(required)" autofocus />
+            <input class="form-control" style="background-color: white; border: 1px black solid; color: black;" data-id="name" name="name" value="{{modelJSON.name}}" placeholder="Name(required)" autofocus />
         </div>
     </div>
-    <div class="form-group">
-        <label class="control-label col-sm-2" for="description">Short Description</label>
+    <div class="form-group" style="display: flex; flex-direction: column;">
+        <div style="display: flex; justify-content: flex-start;">
+            <label style="font-family: Rakuten Sans UI;
+            font-style: normal;
+            font-weight: normal;
+            font-size: 12px;
+            line-height: 16px;
+            color: #686868;
+            margin-bottom: 10px;
+            margin-left: 27px;" for="description">Short Description</label>
+        </div>
         <div class="col-sm-10">
-            <input class="form-control" name="shortDescription" data-id="shortDescription" value="{{modelJSON.shortDescription}}" placeholder="Short Description" />
+            <input style="background-color: white; border: 1px black solid; color: black;" class="form-control" name="shortDescription" data-id="shortDescription" value="{{modelJSON.shortDescription}}" placeholder="Short Description" />
         </div>
     </div>
-    <div class="form-group">
-        <label class="control-label col-sm-2" for="description">Long Description</label>
-        <div class="col-sm-10">
-            <textarea class="form-control" name="longDescription" data-id="longDescription" placeholder="Long Description">{{modelJSON.longDescription}}</textarea>
+    <div class="form-group"  style="display: flex; flex-direction: column;">
+        <div style="display: flex; justify-content: flex-start;">
+            <label style="font-family: Rakuten Sans UI;
+            font-style: normal;
+            font-weight: normal;
+            font-size: 12px;
+            line-height: 16px;
+            color: #686868;
+            margin-bottom: 10px;
+            margin-left: 27px;"  for="description">Long Description</label>
+        </div>
+        <div class="col-sm-10" style="background-color: white; border: 1px black solid; color: black; margin-left: 14px; border-radius: 4px; ">
+            <textarea  name="longDescription" data-id="longDescription" placeholder="Long Description">{{modelJSON.longDescription}}</textarea>
         </div>
     </div>
 </form>
+
