--- a/dashboardv2/public/js/templates/search/save/SaveModalLayoutView_tmpl.html
+++ b/dashboardv2/public/js/templates/search/save/SaveModalLayoutView_tmpl.html
@@ -16,9 +16,18 @@
 -->
 <form name="saveAsform" class="form-horizontal" data-id="">
     <div class="form-group">
-        <label class=" col-sm-12 required modal-input-label" for="name">Name</label>
-        <div class="col-sm-12 modal-input-field">
-            <input class="form-control" data-id="saveAsName" placeholder="Name" value="{{selectedModel.name}}" autofocus />
+        <!-- <label class="control-label col-sm-2 required" for="name">Name</label> -->
+        <label style="font-family: Rakuten Sans UI;
+        font-style: normal;
+        font-weight: normal;
+        font-size: 12px;
+        line-height: 16px;
+        color: #686868;
+        margin-bottom: 10px;
+        margin-left: 27px;
+        " for="name">Name</label>
+        <div class="col-sm-10">
+            <input class="form-control" data-id="saveAsName" placeholder="Name(required)" value="{{selectedModel.name}}" autofocus />
         </div>
     </div>
 </form>
