header changes and stats modal

--- a/dashboardv2/public/css/scss/business-metadata.scss
+++ b/dashboardv2/public/css/scss/business-metadata.scss
@@ -241,3 +241,11 @@
         width: 30%;
     }
 }
+.modelHeaders {
+font-family: Rakuten Sans UI;
+font-style: normal;
+font-weight: bold;
+font-size: 16px;
+line-height: 21px;
+color: #333333;
+}
