--- a/dashboardv2/public/css/scss/stats.scss
+++ b/dashboardv2/public/css/scss/stats.scss
@@ -171,3 +171,12 @@
         }
     }
 }
+
+.tableHeadingsStats{
+    font-family: Rakuten Sans UI;
+font-style: normal;
+font-weight: 600;
+font-size: 14px;
+line-height: 21px;
+color: #333333;
+}
