--- a/dashboardv2/public/js/templates/site/entity_tmpl.html
+++ b/dashboardv2/public/js/templates/site/entity_tmpl.html
@@ -15,18 +15,18 @@
  * limitations under the License.
 -->
 <thead>
-    <tr>
-        <th>Entity Type</th>
-        <th>Active <span data-id="activeEntity"></span></th>
-        <th>Deleted <span data-id="deletedEntity"></span></th>
-        <th>Shell <span data-id="shellEntity"></span></th>
+    <tr style="outline: 1px solid #F2F2F2">
+        <th class="tableHeadingsStats" style="border: 1px solid #F2F2F2">Entity Type</th>
+        <th class="tableHeadingsStats">Active <span data-id="activeEntity"></span></th>
+        <th class="tableHeadingsStats">Deleted <span data-id="deletedEntity"></span></th>
+        <th class="tableHeadingsStats">Shell <span data-id="shellEntity"></span></th>
     </tr>
 </thead>
 {{#if data}}
 <tbody>
     {{#each data}}
-    <tr>
-        <td><span>{{@key}}&nbsp;({{arithmetic this.active '+' this.deleted}})</span></td>
+    <tr style="outline: 1px solid #F2F2F2">
+        <td style="border: 1px solid #F2F2F2"><span>{{@key}}&nbsp;({{arithmetic this.active '+' this.deleted}})</span></td>
         {{#if this.active}}
         <td>
             <a title="Search for active entities of type '{{@key}}'" class="linkClicked" href="#!/search/searchResult?searchType=basic&type={{@key}}">{{this.active}}</a>
