--- a/dashboardv2/public/js/templates/common/Modal.html
+++ b/dashboardv2/public/js/templates/common/Modal.html
@@ -18,9 +18,9 @@
     <div class="modal-content">
         {{#if title}}
         <div class="modal-header">
-            <img src="img/closeIcon.svg" width="20px" height="20px" class="close closeIcon"></img>
+            <img src="img/closeIcon.svg" width="20px" height="20px" class="close closeIcon" style="margin-top: 2px;"></img>
             {{#if headerButtons}}
-            <div class="header-button">
+            <div class="header-button" style="margin-bottom: -6px;">
                 {{#each headerButtons}}
                 <button type="button" data-index={{@index}} {{#if this.title}} title="{{this.title}}" {{/if}} class="btn {{this.btnClass}}">{{this.text}}</button>
                 {{/each}}
