--- a/dashboardv2/public/js/templates/site/Statistics_tmpl.html
+++ b/dashboardv2/public/js/templates/site/Statistics_tmpl.html
@@ -19,9 +19,19 @@
         <div class="progress-bar progress-bar-success progress-bar-striped" role="progressbar" aria-valuemin="0" aria-valuemax="100" data-id="migrationProgressBar">
             <span data-id="migrationProgressBarValue"></span>
         </div>
+        <pre class="successStatus hide">Migration is <span class="color">successful</span>. To exit form migration mode, please remove <span class="color">atlas.migration.data.filename</span> property and restart Atlas.</pre>
+        <div class="refresh-container statisticsRefresh" data-id="statisticsRefresh">
+            <button type="button" class="btn fa fa-refresh pull-right btn-sm btn-action" title="Refresh Data"></button>
+        </div> 
     </div>
-    <pre class="successStatus hide">Migration is <span class="color">successful</span>. To exit form migration mode, please remove <span class="color">atlas.migration.data.filename</span> property and restart Atlas.</pre>
 </div>
+<!-- <div class="statistics-timeline col-sm-12">
+    <div class="form-group clearfix">
+        <div class="col-sm-4 pull-right" style="padding:0px;">
+            <select class="form-control statistics-time-list" data-id="metricsTimeList"></select>
+        </div>
+    </div>
+</div> -->
 <div class="panel-group server-stats-container statsContainer hide col-md-12" id="accordion">
     <div class="panel panel-default custom-panel expand_collapse_panel-icon" data-id="entity">
         <div class="panel-heading" data-toggle="collapse" href="#entityCountCollapse" aria-expanded="true">
