table css changes

--- a/dashboardv2/public/css/scss/__variable.scss
+++ b/dashboardv2/public/css/scss/__variable.scss
@@ -96,6 +96,9 @@ $tag_color: #C53E6C;
 $delete_link: #bb5838;
 $color_rcp_primary:#C53E6C;
 $color_rcp_line_color:#EBEBEB;
+$color_rcp_secondary:#90003B;
+$color_rcp_primary_dark:#A53159;
+
 
 //urls
 $url_0: url(../img/loading.gif);
