--- a/dashboardv2/public/css/scss/tag.scss
+++ b/dashboardv2/public/css/scss/tag.scss
@@ -292,6 +292,7 @@ line-height: 21px;
 }
 .tableFilterCheckbox{
   margin-right: 10px !important;
+  margin-top: 6px !important;
 }
 .checkboxcustomstyles{
   .main {
