--- a/dashboardv2/public/js/templates/entity/CreateEntityLayoutView_tmpl.html
+++ b/dashboardv2/public/js/templates/entity/CreateEntityLayoutView_tmpl.html
@@ -30,13 +30,15 @@
                     <select class="form-control col-sm-6 row-margin-bottom" data-id="entityList"></select>
                 </div>
                 {{/if}}
-                <div class="col-sm-4 toggleRequiredSwitch">
+                <div class="col-sm-12 toggleRequiredSwitch">
+                    <div class='pull-right'>
                     <span class="pull-left">Required</span>
                     <label class="switch pull-left">
                         <input type="checkbox" class="switch-input" name="toggleRequired" value="text">
                         <div class="switch-slider"></div>
                     </label>
                     <span class="pull-left">All</span>
+                </div>
                 </div>
             </div>
         </div>
