--- a/dashboardv2/public/js/templates/search/SearchResultLayoutView_tmpl.html
+++ b/dashboardv2/public/js/templates/search/SearchResultLayoutView_tmpl.html
@@ -42,7 +42,7 @@
         class="row form-group pagination-box filter-box"
         style="display: none"
       >
-        <div class="col-sm-12 inline-content-fr no-padding-left">
+        <div class="col-sm-12 inline-content-fr no-padding-left no-padding-right">
           <div class="inline selectColumnButton" data-id="colManager" ></div>
           <div class="inline">
             <a
@@ -51,7 +51,7 @@
               style="display: none"
               title="Assign Classification"
               data-id="addAssignTag"
-              ><i class="fa fa-plus"></i>&nbsp;Classification</a
+              ><i class="bi bi-plus"></i>&nbsp;Classification</a
             >
           </div>
           {{#unless isGlossaryView}}
