--- a/dashboardv2/public/css/scss/search.scss
+++ b/dashboardv2/public/css/scss/search.scss
@@ -128,7 +128,12 @@ a:hover {
   padding: 0 16px;
   text-align: left;
   background-color: #FFFFFF !important;
+ a{
+        }
+        a:hover{
+          text-decoration: none !important;
 
+        }
   th{
       text-align: left;
       border-bottom: none !important;
@@ -253,18 +258,20 @@ ul.type-filter-ul {
         left: 0;
         height: 20px;
         width: 20px;
-        background-color: #eee;
+        background-color: $white;
+        border: 2px solid #686868;
         border-radius: 4px;
       }
       
       /* On mouse-over, add a grey background color */
       .main:hover input ~ .checkmark {
-        background-color: #ccc;
+        background-color: $white;
       }
       
       /* When the checkbox is checked, add a blue background */
       .main input:checked ~ .checkmark {
-        background-color: $color_rcp_primary;
+        background-color: $color_rcp_secondary;
+        border:2px solid $color_rcp_secondary ;
       }
       
       /* Create the checkmark/indicator (hidden when not checked) */
@@ -281,13 +288,13 @@ ul.type-filter-ul {
       
       /* Style the checkmark/indicator */
       .main .checkmark:after {
-        left: 8px;
-    top: 4px;
-    width: 5px;
-    height: 10px;
-    border: solid white;
-    /* border-radius: 4px; */
-    border-width: 0 1px 1px 0;
+        left: 6px;
+        top: 2px;
+        width: 5px;
+        height: 10px;
+        border: solid white;
+        /* border-radius: 4px; */
+        border-width: 0 1px 1px 0;
         -webkit-transform: rotate(45deg);
         -ms-transform: rotate(45deg);
         transform: rotate(45deg);
@@ -350,23 +357,26 @@ hr.hr-filter {
       display: none !important;
     }
   }
+  .searach-result-pagination{
+    padding-left: 16px;
+  }
 }
 .selectColumnButton{
     margin-top: -80px !important;
-    padding-right: 16px;
+ 
     button{
         border: 1px solid #9C9C9C;
-box-sizing: border-box;
-border-radius: 4px;
-font-size: 16px;
-color: #333333;
-background:$white;
-width: 170px;
-text-align: left;
-i{
-    float: right;
-    margin-top: 4px;
-}
+        box-sizing: border-box;
+        border-radius: 4px;
+        font-size: 16px;
+        color: #333333;
+        background:$white;
+        width: 170px;
+        text-align: left;
+        i{
+            float: right;
+            margin-top: 4px;
+        }
     }
 }
 
@@ -478,6 +488,14 @@ i{
 ul {
     list-style-type: none;
 }
-.r_TagAttributeDetailLayoutView + .container-fluid{
+table.backgrid{
+input[type='checkbox'] {
+  height: 20px;
+  width: 20px;
+  accent-color: $color_rcp_secondary;
+  vertical-align: inherit;
+  cursor: pointer;
+  border-radius: 4px !important;
+}
 
 }
