--- a/dashboardv2/public/css/scss/table.scss
+++ b/dashboardv2/public/css/scss/table.scss
@@ -285,12 +285,12 @@ td {
         min-width: 150px;
 
         &:hover {
-            img {
-                transform: scale(1.5);
-                transform-origin: 100% 50%;
-                transition: transform 0.2s;
-                outline-color: #f5f5f5;
-            }
+            // img {
+            //     transform: scale(1.5);
+            //     transform-origin: 100% 50%;
+            //     transition: transform 0.2s;
+            //     outline-color: #f5f5f5;
+            // }
         }
 
         a {
