Assign term changes

--- a/dashboardv2/public/css/scss/override.scss
+++ b/dashboardv2/public/css/scss/override.scss
@@ -237,6 +237,13 @@
 .searchTabRefreshBtn{
     padding: 0;
 }
+.searchTabRefreshBtn:hover{
+    filter: invert(28%) sepia(27%) saturate(3520%) hue-rotate(307deg) brightness(85%) contrast(89%);
+   img{
+    //color: invert(100%) sepia(0%) saturate(0%) hue-rotate(144deg) brightness(108%) contrast(102%);
+   }
+    
+}
 .searchTabFilterBtn{
     padding: 0;
 }
