glossary tab changes

--- a/dashboardv2/public/css/scss/glossary.scss
+++ b/dashboardv2/public/css/scss/glossary.scss
@@ -149,3 +149,14 @@
     background: #C53E6C;
     color: #FFFFFF;
 }
+
+.glosLabel {
+font-family: Rakuten Sans UI;
+font-style: normal;
+font-weight: normal;
+font-size: 14px;
+line-height: 20px;
+display: flex;
+align-items: center;
+color: #333333;
+}
