--- a/dashboardv2/public/js/templates/glossary/GlossaryLayoutView_tmpl.html
+++ b/dashboardv2/public/js/templates/glossary/GlossaryLayoutView_tmpl.html
@@ -53,7 +53,7 @@
                     font-style: normal;
                     font-weight: 400;
                     padding-left: 16px;">Search Glossary</label>
-                    <input type="text" class="form-control" data-id="searchTerm" placeholder="{{#if isAssignView}}Search Term{{else}}Search Glossary, Term{{/if}}">
+                    <input type="text" class="form-control glosLabel" data-id="searchTerm" placeholder="{{#if isAssignView}}Search Term{{else}}Search Glossary, Term{{/if}}">
                 </div>
                 <div data-id="termTree" style="margin-top: 5px;padding-bottom: 25px;overflow-x: auto;overflow-y:hidden;">
                 </div>
@@ -65,7 +65,7 @@
                     font-style: normal;
                     font-weight: 400;
                     padding-left: 16px;">Search Glossary</label>
-                    <input type="text" class="form-control" data-id="searchCategory" placeholder="{{#if isAssignView}}Search Catalog{{else}}Search Glossary, Category{{/if}}">
+                    <input type="text" class="form-control glosLabel" data-id="searchCategory" placeholder="{{#if isAssignView}}Search Catalog{{else}}Search Glossary, Category{{/if}}">
                 </div>
                 
                 <div data-id="categoryTree" style="margin-top: 5px;padding-bottom: 25px;overflow-x: auto;overflow-y: hidden;">
