--- a/dashboardv2/public/js/templates/search/SearchLayoutView_tmpl.html
+++ b/dashboardv2/public/js/templates/search/SearchLayoutView_tmpl.html
@@ -27,7 +27,7 @@
                 <span class="advancedInfo" data-id="advancedInfo"><i class="fa fa-question-circle-o"></i></span>
             </div>
             <div class="col-sm-3 filter-btn-wrapper">
-                <button type="button" class="btn   pull-right typeLOV searchTabRefreshBtn" title="Refresh" data-id="refreshBtn"><img src="img/refreshicon.svg" height="36px" width="36px"></button>
+                <button type="button" style="background-color: white;border: 1px solid #F2F2F2;height: 35.7px;" class="btn pull-right typeLOV searchTabRefreshBtn" title="Refresh" data-id="refreshBtn"><svg height="34px" width="34px"><path d="M25.375 18C25.375 21.7906 22.2906 24.875 18.5 24.875C14.7094 24.875 11.625 21.7906 11.625 18C11.625 14.2094 14.7094 11.125 18.5 11.125C20.4325 11.125 22.2344 11.9275 23.5344 13.3313L21.9913 14.875H26V10.8662L24.4187 12.4475C22.885 10.8094 20.7681 9.875 18.5 9.875C14.02 9.875 10.375 13.52 10.375 18C10.375 22.48 14.02 26.125 18.5 26.125C22.98 26.125 26.625 22.48 26.625 18H25.375Z"></path></svg></button>
             </div>
         </div>
     </div>
